<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alertdialogpro.demo.MainActivity">

    <Button
        android:id="@+id/showHoloDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_holo_dialog" />

    <Button
        android:id="@+id/showHoloLightDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showHoloDialog"
        android:text="@string/show_holo_light_dialog" />

    <Button
        android:id="@+id/showMaterialDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showHoloLightDialog"
        android:text="@string/show_material_dialog" />

    <Button
        android:id="@+id/showMaterialLightDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showMaterialDialog"
        android:text="@string/show_material_light_dialog" />

    <Button
        android:id="@+id/showNativeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/showMaterialLightDialog"
        android:text="@string/show_native_dialog" />

</RelativeLayout>
